# ClawEvents

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
clawevents/: __init__.py  city_registry.py  cli.py  engine.py  filters.py  models.py
clawevents/fetchers/: __init__.py  base.py  eventbrite.py  fever.py  iabilet.py  lev_cinema.py  nyc_open_data.py  playwright_base.py  ra.py  songkick.py  ticketmaster.py  timeout_il.py  tlv_municipality.py  xceed.py
tests/: __init__.py  test_bucharest_fetchers.py  test_registry.py  test_xceed_date_parsing.py
