[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clawevents"
version = "0.1.0"
description = "Multi-city event discovery for OpenClaw agents — Tel Aviv, Barcelona, New York"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "yhyatt"}]
requires-python = ">=3.10"
keywords = ["openclaw", "events", "tel-aviv", "barcelona", "new-york", "concerts", "jazz", "cinema"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock",
]

[project.scripts]
clawevents = "clawevents.cli:run"

[project.urls]
Homepage = "https://github.com/yhyatt/clawevents"
Repository = "https://github.com/yhyatt/clawevents"

[tool.setuptools.packages.find]
where = ["."]
include = ["clawevents*"]
